# platform

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
.github/workflows/: ci.yml  docs.yml  python-package.yml  release.yml  team_workflow.yml
configs/algo_configs/: evaluation_config.yaml  training_config.yaml
configs/algorithms/: sac_config.yaml
configs/custom/: custom_training.yaml
configs/env_configs/: base_config.yaml
configs/environments/: carla_env.yaml
configs/evaluation/: default.yaml
configs/logging/: default.yaml
configs/networks/: sac_network.yaml
configs/rewards/: default.yaml
configs/scenario_configs/: scenarios.yaml
configs/scenarios/: urban.yaml
configs/tasks/: navigation_task.yaml
configs/test_configs/: algorithm_test.yaml
configs/training/: curriculum_config.yaml  default.yaml
configs/visualization/: control_panel_config.yaml  dashboard_config.yaml  default.yaml
docs/: README.md  conf.py  configuration.md  index.rst  installation.md
docs/api/: index.md  index.rst
docs/development/: CONTRIBUTING.md  algorithm_development.md  developer_guide.md  environment_development.md
docs/guides/: benchmark_guide.md  custom_env_guide.md
examples/: basic_example.py  custom_algorithm.py  custom_env.py  custom_network.py  custom_reward.py  train_example.py
scripts/: collect_data.py  convert_model.py  evaluate.py  profile.py  setup_dev_env.py  train.py  visualize.py
src/: __init__.py
src/algorithms/: __init__.py  base.py  config_generator.py  custom_algorithm.py  registry.py
src/data/: collector.py
src/environments/: __init__.py  base.py  carla_env.py  rl_env.py
src/evaluation/: __init__.py  distributed_evaluator.py  evaluator.py
src/scenarios/: scenario_generator.py  scenario_manager.py
src/tests/: auto_tester.py  test_runner.py
src/training/: __init__.py  curriculum.py  monitor.py  parallel_trainer.py  train_manager.py  trainer.py
(+43 files in other folders)
