[metadata]
name = carla-test-platform
version = 0.1.0
description = CARLA自动驾驶算法测试平台
long_description = file: README.md
long_description_content_type = text/markdown
author = Your Organization
author_email = your.email@example.com
url = https://github.com/your-org/carla-test-platform
license = MIT
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering :: Artificial Intelligence

[options]
packages = find:
python_requires = >=3.7
install_requires =
    carla>=0.9.13
    numpy>=1.19.0
    torch>=1.7.0
    opencv-python>=4.5.0
    pygame>=2.0.0
    wandb>=0.12.0
    matplotlib>=3.3.0
    pyyaml>=5.4.0
    tensorboard>=2.4.0
    tqdm>=4.60.0
    psutil>=5.8.0

[options.extras_require]
dev =
    pytest>=6.0
    pytest-cov>=2.0
    black>=21.0
    flake8>=3.9.0
    mypy>=0.910
    pre-commit>=2.15.0
    sphinx>=4.0.0
    sphinx-rtd-theme>=0.5.0

[options.package_data]
* = *.yaml, *.json

[flake8]
max-line-length = 100
exclude = .git,__pycache__,build,dist
per-file-ignores =
    __init__.py:F401,F403

[mypy]
python_version = 3.7
warn_return_any = True
warn_unused_configs = True
disallow_untyped_defs = True
disallow_incomplete_defs = True
check_untyped_defs = True
disallow_untyped_decorators = True
no_implicit_optional = True
warn_redundant_casts = True
warn_unused_ignores = True
warn_no_return = True
warn_unreachable = True

[tool:pytest]
testpaths = tests
python_files = test_*.py
addopts = --verbose --cov=src --cov-report=term-missing

[coverage:run]
source = src
omit =
    tests/*
    setup.py

[coverage:report]
exclude_lines =
    pragma: no cover
    def __repr__
    raise NotImplementedError
    if __name__ == .__main__.:
    pass